qt/gen_qwindow.h

typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QCursor QCursor;
typedef struct QIcon QIcon;
typedef struct QMargins QMargins;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QScreen QScreen;
typedef struct QSize QSize;
typedef struct QSurfaceFormat QSurfaceFormat;
typedef struct QWindow QWindow;
QWindow* QWindow_new();
QWindow* QWindow_new2(QWindow* parent);
QWindow* QWindow_new3(QScreen* screen);
QMetaObject* QWindow_metaObject(const QWindow* self);
void* QWindow_metacast(QWindow* self, const char* param1);
int QWindow_metacall(QWindow* self, int param1, int param2, void** param3);
struct miqt_string QWindow_tr(const char* s);
struct miqt_string QWindow_trUtf8(const char* s);
void QWindow_setSurfaceType(QWindow* self, int surfaceType);
int QWindow_surfaceType(const QWindow* self);
bool QWindow_isVisible(const QWindow* self);
int QWindow_visibility(const QWindow* self);
void QWindow_setVisibility(QWindow* self, int v);
void QWindow_create(QWindow* self);
uintptr_t QWindow_winId(const QWindow* self);
QWindow* QWindow_parent(const QWindow* self, int mode);
QWindow* QWindow_parent2(const QWindow* self);
void QWindow_setParent(QWindow* self, QWindow* parent);
bool QWindow_isTopLevel(const QWindow* self);
bool QWindow_isModal(const QWindow* self);
int QWindow_modality(const QWindow* self);
void QWindow_setModality(QWindow* self, int modality);
void QWindow_setFormat(QWindow* self, QSurfaceFormat* format);
QSurfaceFormat* QWindow_format(const QWindow* self);
QSurfaceFormat* QWindow_requestedFormat(const QWindow* self);
void QWindow_setFlags(QWindow* self, int flags);
int QWindow_flags(const QWindow* self);
void QWindow_setFlag(QWindow* self, int param1);
int QWindow_type(const QWindow* self);
struct miqt_string QWindow_title(const QWindow* self);
void QWindow_setOpacity(QWindow* self, double level);
double QWindow_opacity(const QWindow* self);
void QWindow_setMask(QWindow* self, QRegion* region);
QRegion* QWindow_mask(const QWindow* self);
bool QWindow_isActive(const QWindow* self);
void QWindow_reportContentOrientationChange(QWindow* self, int orientation);
int QWindow_contentOrientation(const QWindow* self);
double QWindow_devicePixelRatio(const QWindow* self);
int QWindow_windowState(const QWindow* self);
int QWindow_windowStates(const QWindow* self);
void QWindow_setWindowState(QWindow* self, int state);
void QWindow_setWindowStates(QWindow* self, int states);
void QWindow_setTransientParent(QWindow* self, QWindow* parent);
QWindow* QWindow_transientParent(const QWindow* self);
bool QWindow_isAncestorOf(const QWindow* self, QWindow* child);
bool QWindow_isExposed(const QWindow* self);
int QWindow_minimumWidth(const QWindow* self);
int QWindow_minimumHeight(const QWindow* self);
int QWindow_maximumWidth(const QWindow* self);
int QWindow_maximumHeight(const QWindow* self);
QSize* QWindow_minimumSize(const QWindow* self);
QSize* QWindow_maximumSize(const QWindow* self);
QSize* QWindow_baseSize(const QWindow* self);
QSize* QWindow_sizeIncrement(const QWindow* self);
void QWindow_setMinimumSize(QWindow* self, QSize* size);
void QWindow_setMaximumSize(QWindow* self, QSize* size);
void QWindow_setBaseSize(QWindow* self, QSize* size);
void QWindow_setSizeIncrement(QWindow* self, QSize* size);
QRect* QWindow_geometry(const QWindow* self);
QMargins* QWindow_frameMargins(const QWindow* self);
QRect* QWindow_frameGeometry(const QWindow* self);
QPoint* QWindow_framePosition(const QWindow* self);
void QWindow_setFramePosition(QWindow* self, QPoint* point);
int QWindow_width(const QWindow* self);
int QWindow_height(const QWindow* self);
int QWindow_x(const QWindow* self);
int QWindow_y(const QWindow* self);
QSize* QWindow_size(const QWindow* self);
QPoint* QWindow_position(const QWindow* self);
void QWindow_setPosition(QWindow* self, QPoint* pt);
void QWindow_setPosition2(QWindow* self, int posx, int posy);
void QWindow_resize(QWindow* self, QSize* newSize);
void QWindow_resize2(QWindow* self, int w, int h);
void QWindow_setFilePath(QWindow* self, struct miqt_string filePath);
struct miqt_string QWindow_filePath(const QWindow* self);
void QWindow_setIcon(QWindow* self, QIcon* icon);
QIcon* QWindow_icon(const QWindow* self);
void QWindow_destroy(QWindow* self);
bool QWindow_setKeyboardGrabEnabled(QWindow* self, bool grab);
bool QWindow_setMouseGrabEnabled(QWindow* self, bool grab);
QScreen* QWindow_screen(const QWindow* self);
void QWindow_setScreen(QWindow* self, QScreen* screen);
QAccessibleInterface* QWindow_accessibleRoot(const QWindow* self);
QObject* QWindow_focusObject(const QWindow* self);
QPoint* QWindow_mapToGlobal(const QWindow* self, QPoint* pos);
QPoint* QWindow_mapFromGlobal(const QWindow* self, QPoint* pos);
QCursor* QWindow_cursor(const QWindow* self);
void QWindow_setCursor(QWindow* self, QCursor* cursor);
void QWindow_unsetCursor(QWindow* self);
QWindow* QWindow_fromWinId(uintptr_t id);
void QWindow_requestActivate(QWindow* self);
void QWindow_setVisible(QWindow* self, bool visible);
void QWindow_show(QWindow* self);
void QWindow_hide(QWindow* self);
void QWindow_showMinimized(QWindow* self);
void QWindow_showMaximized(QWindow* self);
void QWindow_showFullScreen(QWindow* self);
void QWindow_showNormal(QWindow* self);
bool QWindow_close(QWindow* self);
void QWindow_raise(QWindow* self);
void QWindow_lower(QWindow* self);
bool QWindow_startSystemResize(QWindow* self, int edges);
bool QWindow_startSystemMove(QWindow* self);
void QWindow_setTitle(QWindow* self, struct miqt_string title);
void QWindow_setX(QWindow* self, int arg);
void QWindow_setY(QWindow* self, int arg);
void QWindow_setWidth(QWindow* self, int arg);
void QWindow_setHeight(QWindow* self, int arg);
void QWindow_setGeometry(QWindow* self, int posx, int posy, int w, int h);
void QWindow_setGeometryWithRect(QWindow* self, QRect* rect);
void QWindow_setMinimumWidth(QWindow* self, int w);
void QWindow_setMinimumHeight(QWindow* self, int h);
void QWindow_setMaximumWidth(QWindow* self, int w);
void QWindow_setMaximumHeight(QWindow* self, int h);
void QWindow_alert(QWindow* self, int msec);
void QWindow_requestUpdate(QWindow* self);
void QWindow_screenChanged(QWindow* self, QScreen* screen);
void QWindow_connect_screenChanged(QWindow* self, intptr_t slot);
void QWindow_modalityChanged(QWindow* self, int modality);
void QWindow_connect_modalityChanged(QWindow* self, intptr_t slot);
void QWindow_windowStateChanged(QWindow* self, int windowState);
void QWindow_connect_windowStateChanged(QWindow* self, intptr_t slot);
void QWindow_windowTitleChanged(QWindow* self, struct miqt_string title);
void QWindow_connect_windowTitleChanged(QWindow* self, intptr_t slot);
void QWindow_xChanged(QWindow* self, int arg);
void QWindow_connect_xChanged(QWindow* self, intptr_t slot);
void QWindow_yChanged(QWindow* self, int arg);
void QWindow_connect_yChanged(QWindow* self, intptr_t slot);
void QWindow_widthChanged(QWindow* self, int arg);
void QWindow_connect_widthChanged(QWindow* self, intptr_t slot);