qt/gen_qwindow.nim


proc fcQWindow_new(): ptr cQWindow {.importc: "QWindow_new".}
proc fcQWindow_new2(parent: pointer): ptr cQWindow {.importc: "QWindow_new2".}
proc fcQWindow_new3(screen: pointer): ptr cQWindow {.importc: "QWindow_new3".}
proc fcQWindow_metaObject(self: pointer, ): pointer {.importc: "QWindow_metaObject".}
proc fcQWindow_metacast(self: pointer, param1: cstring): pointer {.importc: "QWindow_metacast".}
proc fcQWindow_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWindow_metacall".}
proc fcQWindow_tr(s: cstring): struct_miqt_string {.importc: "QWindow_tr".}
proc fcQWindow_trUtf8(s: cstring): struct_miqt_string {.importc: "QWindow_trUtf8".}
proc fcQWindow_setSurfaceType(self: pointer, surfaceType: cint): void {.importc: "QWindow_setSurfaceType".}
proc fcQWindow_surfaceType(self: pointer, ): cint {.importc: "QWindow_surfaceType".}
proc fcQWindow_isVisible(self: pointer, ): bool {.importc: "QWindow_isVisible".}
proc fcQWindow_visibility(self: pointer, ): cint {.importc: "QWindow_visibility".}
proc fcQWindow_setVisibility(self: pointer, v: cint): void {.importc: "QWindow_setVisibility".}
proc fcQWindow_create(self: pointer, ): void {.importc: "QWindow_create".}
proc fcQWindow_winId(self: pointer, ): uint {.importc: "QWindow_winId".}
proc fcQWindow_parent(self: pointer, mode: cint): pointer {.importc: "QWindow_parent".}
proc fcQWindow_parent2(self: pointer, ): pointer {.importc: "QWindow_parent2".}
proc fcQWindow_setParent(self: pointer, parent: pointer): void {.importc: "QWindow_setParent".}
proc fcQWindow_isTopLevel(self: pointer, ): bool {.importc: "QWindow_isTopLevel".}
proc fcQWindow_isModal(self: pointer, ): bool {.importc: "QWindow_isModal".}
proc fcQWindow_modality(self: pointer, ): cint {.importc: "QWindow_modality".}
proc fcQWindow_setModality(self: pointer, modality: cint): void {.importc: "QWindow_setModality".}
proc fcQWindow_setFormat(self: pointer, format: pointer): void {.importc: "QWindow_setFormat".}
proc fcQWindow_format(self: pointer, ): pointer {.importc: "QWindow_format".}
proc fcQWindow_requestedFormat(self: pointer, ): pointer {.importc: "QWindow_requestedFormat".}
proc fcQWindow_setFlags(self: pointer, flags: cint): void {.importc: "QWindow_setFlags".}
proc fcQWindow_flags(self: pointer, ): cint {.importc: "QWindow_flags".}
proc fcQWindow_setFlag(self: pointer, param1: cint): void {.importc: "QWindow_setFlag".}
proc fcQWindow_typeX(self: pointer, ): cint {.importc: "QWindow_type".}
proc fcQWindow_title(self: pointer, ): struct_miqt_string {.importc: "QWindow_title".}
proc fcQWindow_setOpacity(self: pointer, level: float64): void {.importc: "QWindow_setOpacity".}
proc fcQWindow_opacity(self: pointer, ): float64 {.importc: "QWindow_opacity".}
proc fcQWindow_setMask(self: pointer, region: pointer): void {.importc: "QWindow_setMask".}
proc fcQWindow_mask(self: pointer, ): pointer {.importc: "QWindow_mask".}
proc fcQWindow_isActive(self: pointer, ): bool {.importc: "QWindow_isActive".}
proc fcQWindow_reportContentOrientationChange(self: pointer, orientation: cint): void {.importc: "QWindow_reportContentOrientationChange".}
proc fcQWindow_contentOrientation(self: pointer, ): cint {.importc: "QWindow_contentOrientation".}
proc fcQWindow_devicePixelRatio(self: pointer, ): float64 {.importc: "QWindow_devicePixelRatio".}
proc fcQWindow_windowState(self: pointer, ): cint {.importc: "QWindow_windowState".}
proc fcQWindow_windowStates(self: pointer, ): cint {.importc: "QWindow_windowStates".}
proc fcQWindow_setWindowState(self: pointer, state: cint): void {.importc: "QWindow_setWindowState".}
proc fcQWindow_setWindowStates(self: pointer, states: cint): void {.importc: "QWindow_setWindowStates".}
proc fcQWindow_setTransientParent(self: pointer, parent: pointer): void {.importc: "QWindow_setTransientParent".}
proc fcQWindow_transientParent(self: pointer, ): pointer {.importc: "QWindow_transientParent".}
proc fcQWindow_isAncestorOf(self: pointer, child: pointer): bool {.importc: "QWindow_isAncestorOf".}
proc fcQWindow_isExposed(self: pointer, ): bool {.importc: "QWindow_isExposed".}
proc fcQWindow_minimumWidth(self: pointer, ): cint {.importc: "QWindow_minimumWidth".}
proc fcQWindow_minimumHeight(self: pointer, ): cint {.importc: "QWindow_minimumHeight".}
proc fcQWindow_maximumWidth(self: pointer, ): cint {.importc: "QWindow_maximumWidth".}
proc fcQWindow_maximumHeight(self: pointer, ): cint {.importc: "QWindow_maximumHeight".}
proc fcQWindow_minimumSize(self: pointer, ): pointer {.importc: "QWindow_minimumSize".}
proc fcQWindow_maximumSize(self: pointer, ): pointer {.importc: "QWindow_maximumSize".}
proc fcQWindow_baseSize(self: pointer, ): pointer {.importc: "QWindow_baseSize".}
proc fcQWindow_sizeIncrement(self: pointer, ): pointer {.importc: "QWindow_sizeIncrement".}
proc fcQWindow_setMinimumSize(self: pointer, size: pointer): void {.importc: "QWindow_setMinimumSize".}
proc fcQWindow_setMaximumSize(self: pointer, size: pointer): void {.importc: "QWindow_setMaximumSize".}
proc fcQWindow_setBaseSize(self: pointer, size: pointer): void {.importc: "QWindow_setBaseSize".}
proc fcQWindow_setSizeIncrement(self: pointer, size: pointer): void {.importc: "QWindow_setSizeIncrement".}
proc fcQWindow_geometry(self: pointer, ): pointer {.importc: "QWindow_geometry".}
proc fcQWindow_frameMargins(self: pointer, ): pointer {.importc: "QWindow_frameMargins".}
proc fcQWindow_frameGeometry(self: pointer, ): pointer {.importc: "QWindow_frameGeometry".}
proc fcQWindow_framePosition(self: pointer, ): pointer {.importc: "QWindow_framePosition".}
proc fcQWindow_setFramePosition(self: pointer, point: pointer): void {.importc: "QWindow_setFramePosition".}
proc fcQWindow_width(self: pointer, ): cint {.importc: "QWindow_width".}
proc fcQWindow_height(self: pointer, ): cint {.importc: "QWindow_height".}
proc fcQWindow_x(self: pointer, ): cint {.importc: "QWindow_x".}
proc fcQWindow_y(self: pointer, ): cint {.importc: "QWindow_y".}
proc fcQWindow_size(self: pointer, ): pointer {.importc: "QWindow_size".}
proc fcQWindow_position(self: pointer, ): pointer {.importc: "QWindow_position".}
proc fcQWindow_setPosition(self: pointer, pt: pointer): void {.importc: "QWindow_setPosition".}
proc fcQWindow_setPosition2(self: pointer, posx: cint, posy: cint): void {.importc: "QWindow_setPosition2".}
proc fcQWindow_resize(self: pointer, newSize: pointer): void {.importc: "QWindow_resize".}
proc fcQWindow_resize2(self: pointer, w: cint, h: cint): void {.importc: "QWindow_resize2".}
proc fcQWindow_setFilePath(self: pointer, filePath: struct_miqt_string): void {.importc: "QWindow_setFilePath".}
proc fcQWindow_filePath(self: pointer, ): struct_miqt_string {.importc: "QWindow_filePath".}
proc fcQWindow_setIcon(self: pointer, icon: pointer): void {.importc: "QWindow_setIcon".}
proc fcQWindow_icon(self: pointer, ): pointer {.importc: "QWindow_icon".}
proc fcQWindow_destroy(self: pointer, ): void {.importc: "QWindow_destroy".}
proc fcQWindow_setKeyboardGrabEnabled(self: pointer, grab: bool): bool {.importc: "QWindow_setKeyboardGrabEnabled".}
proc fcQWindow_setMouseGrabEnabled(self: pointer, grab: bool): bool {.importc: "QWindow_setMouseGrabEnabled".}
proc fcQWindow_screen(self: pointer, ): pointer {.importc: "QWindow_screen".}
proc fcQWindow_setScreen(self: pointer, screen: pointer): void {.importc: "QWindow_setScreen".}
proc fcQWindow_accessibleRoot(self: pointer, ): pointer {.importc: "QWindow_accessibleRoot".}
proc fcQWindow_focusObject(self: pointer, ): pointer {.importc: "QWindow_focusObject".}
proc fcQWindow_mapToGlobal(self: pointer, pos: pointer): pointer {.importc: "QWindow_mapToGlobal".}
proc fcQWindow_mapFromGlobal(self: pointer, pos: pointer): pointer {.importc: "QWindow_mapFromGlobal".}
proc fcQWindow_cursor(self: pointer, ): pointer {.importc: "QWindow_cursor".}
proc fcQWindow_setCursor(self: pointer, cursor: pointer): void {.importc: "QWindow_setCursor".}
proc fcQWindow_unsetCursor(self: pointer, ): void {.importc: "QWindow_unsetCursor".}
proc fcQWindow_fromWinId(id: uint): pointer {.importc: "QWindow_fromWinId".}
proc fcQWindow_requestActivate(self: pointer, ): void {.importc: "QWindow_requestActivate".}
proc fcQWindow_setVisible(self: pointer, visible: bool): void {.importc: "QWindow_setVisible".}
proc fcQWindow_show(self: pointer, ): void {.importc: "QWindow_show".}
proc fcQWindow_hide(self: pointer, ): void {.importc: "QWindow_hide".}
proc fcQWindow_showMinimized(self: pointer, ): void {.importc: "QWindow_showMinimized".}
proc fcQWindow_showMaximized(self: pointer, ): void {.importc: "QWindow_showMaximized".}
proc fcQWindow_showFullScreen(self: pointer, ): void {.importc: "QWindow_showFullScreen".}
proc fcQWindow_showNormal(self: pointer, ): void {.importc: "QWindow_showNormal".}
proc fcQWindow_close(self: pointer, ): bool {.importc: "QWindow_close".}
proc fcQWindow_raiseX(self: pointer, ): void {.importc: "QWindow_raise".}
proc fcQWindow_lower(self: pointer, ): void {.importc: "QWindow_lower".}
proc fcQWindow_startSystemResize(self: pointer, edges: cint): bool {.importc: "QWindow_startSystemResize".}
proc fcQWindow_startSystemMove(self: pointer, ): bool {.importc: "QWindow_startSystemMove".}
proc fcQWindow_setTitle(self: pointer, title: struct_miqt_string): void {.importc: "QWindow_setTitle".}
proc fcQWindow_setX(self: pointer, arg: cint): void {.importc: "QWindow_setX".}
proc fcQWindow_setY(self: pointer, arg: cint): void {.importc: "QWindow_setY".}
proc fcQWindow_setWidth(self: pointer, arg: cint): void {.importc: "QWindow_setWidth".}
proc fcQWindow_setHeight(self: pointer, arg: cint): void {.importc: "QWindow_setHeight".}
proc fcQWindow_setGeometry(self: pointer, posx: cint, posy: cint, w: cint, h: cint): void {.importc: "QWindow_setGeometry".}
proc fcQWindow_setGeometryWithRect(self: pointer, rect: pointer): void {.importc: "QWindow_setGeometryWithRect".}
proc fcQWindow_setMinimumWidth(self: pointer, w: cint): void {.importc: "QWindow_setMinimumWidth".}
proc fcQWindow_setMinimumHeight(self: pointer, h: cint): void {.importc: "QWindow_setMinimumHeight".}
proc fcQWindow_setMaximumWidth(self: pointer, w: cint): void {.importc: "QWindow_setMaximumWidth".}
proc fcQWindow_setMaximumHeight(self: pointer, h: cint): void {.importc: "QWindow_setMaximumHeight".}
proc fcQWindow_alert(self: pointer, msec: cint): void {.importc: "QWindow_alert".}
proc fcQWindow_requestUpdate(self: pointer, ): void {.importc: "QWindow_requestUpdate".}
proc fcQWindow_screenChanged(self: pointer, screen: pointer): void {.importc: "QWindow_screenChanged".}
proc fQWindow_connect_screenChanged(self: pointer, slot: int) {.importc: "QWindow_connect_screenChanged".}
proc fcQWindow_modalityChanged(self: pointer, modality: cint): void {.importc: "QWindow_modalityChanged".}
proc fQWindow_connect_modalityChanged(self: pointer, slot: int) {.importc: "QWindow_connect_modalityChanged".}
proc fcQWindow_windowStateChanged(self: pointer, windowState: cint): void {.importc: "QWindow_windowStateChanged".}
proc fQWindow_connect_windowStateChanged(self: pointer, slot: int) {.importc: "QWindow_connect_windowStateChanged".}
proc fcQWindow_windowTitleChanged(self: pointer, title: struct_miqt_string): void {.importc: "QWindow_windowTitleChanged".}
proc fQWindow_connect_windowTitleChanged(self: pointer, slot: int) {.importc: "QWindow_connect_windowTitleChanged".}
proc fcQWindow_xChanged(self: pointer, arg: cint): void {.importc: "QWindow_xChanged".}
proc fQWindow_connect_xChanged(self: pointer, slot: int) {.importc: "QWindow_connect_xChanged".}
proc fcQWindow_yChanged(self: pointer, arg: cint): void {.importc: "QWindow_yChanged".}
proc fQWindow_connect_yChanged(self: pointer, slot: int) {.importc: "QWindow_connect_yChanged".}
proc fcQWindow_widthChanged(self: pointer, arg: cint): void {.importc: "QWindow_widthChanged".}
proc fQWindow_connect_widthChanged(self: pointer, slot: int) {.importc: "QWindow_connect_widthChanged".}
